force-app/main/default/objects/CIBE_ProductoFieldsNewOppo__mdt/CIBE_ProductoFieldsNewOppo__mdt.object-meta.xml
<CustomObject>
    <description>Metadato para mapear campos de una nueva oportunidad en función del producto</description>
    <label>CIBE Producto Fields New Oppo</label>
    <pluralLabel>CIBE Productos Fields New Oppo</pluralLabel>
</CustomObject>