force-app/main/default/objects/CIBE_ProductoFieldsNewOppo__mdt/fields/CIBE_FieldName__c.field-meta.xml
<CustomField>
    <fullName>CIBE_FieldName__c</fullName>
    <description>Campo utilizado en el alta de la oportunidad</description>
    <label>FieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>