force-app/main/default/objects/CIBE_ProductoFieldsNewOppo__mdt/fields/CIBE_Order__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Order__c</fullName>
    <description>Campo utilizado en el alta de la oportunidad</description>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>