force-app/main/default/objects/CIBE_ProductoFieldsNewOppo__mdt/fields/CIBE_Required__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado en el alta de la oportunidad</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>